# beancount-lsp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  dprint.json  pyproject.toml  taskfile.yaml
.github/: copilot-instructions.md  mergify.yml  renovate.json
.github/workflows/: _build_wheels.yaml  autofix.yaml  ci.yml  lint.yml  release-vscode.yaml  release.yaml  test-wheels.yml  test.yml  tests.yml  vscode.yaml
crates/lsp/: Cargo.toml
crates/lsp-py/: Cargo.toml  pyproject.toml
crates/lsp-py/py-src/beancount_lsp/: __init__.py  _lsp.pyi  cli.py
crates/lsp-py/src/: lib.rs
crates/lsp/benches/: parse_document.rs  semantic_tokens.rs
crates/lsp/src/: doc.rs  indexer.rs  lib.rs  main.rs  python.rs  server.rs  test_utils.rs  text.rs
crates/lsp/src/checkers/: mod.rs  python.rs  python_script.rs
crates/lsp/src/checkers/scripts/: python_json_checker.py
crates/lsp/src/providers/: account.rs  completion.rs  completion_context.rs  definition.rs  hover.rs  mod.rs  semantic_tokens.rs
crates/lsp/src/providers/snapshots/: beancount_lsp__providers__semantic_tokens__tests__semantic_tokens_snapshot.snap
crates/lsp/tests/: account.rs  inference.rs
vscode/: .gitignore  .vscodeignore  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
vscode/src/: extension.ts
