[workspace]
resolver = "3"
members = ["crates/lsp", "crates/lsp-py"]
package.version = "0.0.0"

[workspace.dependencies]
beancount-core = { git = "https://github.com/trim21/beancount.git", rev = "d996b981243349786ff983e31e3b08baaa25d7c9" }
beancount-parser = { git = "https://github.com/trim21/beancount.git", rev = "d996b981243349786ff983e31e3b08baaa25d7c9" }
chumsky = "0.12.0"
ropey = "1.6.1"
tokio = { version = "1.52.1", features = ["fs", "io-std", "macros", "rt-multi-thread", "sync"] }
tower-lsp-server = "0.23.0"

[patch.crates-io]
