[build-system]
requires = ["maturin==1.12.4"]
build-backend = "maturin"

[project]
name = "beancount-lsp"
version = "0.0.13a4"
requires-python = ">=3.10"
description = "Beancount LSP packaged for Python environments"
authors = [{ name = "trim21", email = "trim21.me@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
]

dependencies = ["beancount>=3,<4"]

[project.urls]
Homepage = "https://github.com/trim21/beancount-lsp"

[project.scripts]
beancount-lsp = "beancount_lsp.cli:main"
beancount-langauge-server = "beancount_lsp.cli:main"

[tool.uv]
package = false

[tool.maturin]
manifest-path = "crates/lsp-py/Cargo.toml"
module-name = "beancount_lsp._lsp"
bindings = "pyo3"
python-source = "crates/lsp-py/py-src"
strip = true
