[package]
name = "beancount-lsp-py"
version = { workspace = true }
authors = ["Trim21 <trim21.me@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Python wheel wrapper for beancount-lsp"

[lib]
crate-type = ["cdylib"]

[dependencies]
beancount-lsp = { path = "../lsp", features = ["pyo3"] }
pyo3 = { version = "0.28.0", features = ["abi3-py310", "generate-import-lib"] }
tokio = { workspace = true }
