[build-system]
requires = ["maturin==1.11.5"]
build-backend = "maturin"

[project]
name = "beancount-lsp"
description = "Beancount LSP packaged for Python environments"
version = "0.0.4"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["beancount>=3,<4"]

[project.scripts]
beancount-lsp = "beancount_lsp.cli:main"
beancount-langauge-server = "beancount_lsp.cli:main"

[tool.uv]
package = false

[tool.maturin]
manifest-path = "Cargo.toml"
module-name = "beancount_lsp._lsp"
bindings = "pyo3"
python-source = "py-src"
strip = true
