[package]
name = "beancount-lsp"
version = "0.0.0"
authors = ["Trim21 <trim21.me@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Minimal Beancount LSP using beancount-parser"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
anyhow = "1.0.100"
beancount-parser = { workspace = true }
beancount-tree-sitter = { workspace = true }
clap = { version = "4.5.56", features = ["derive"] }
glob = "0.3.3"
pyo3 = { version = "0.27.2", features = ["auto-initialize", "abi3-py310", "generate-import-lib"], optional = true }
ropey = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
tokio = { workspace = true }
tower-lsp = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tempfile = "3"
