[package]
name = "beancount-lsp"
version = { workspace = true }
authors = ["Trim21 <trim21.me@gmail.com>"]
edition = "2024"
license = "MIT"
description = "Minimal Beancount LSP using beancount-parser"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
anyhow = "1.0.100"
beancount-parser = { workspace = true }
clap = { version = "4.5.56", features = ["derive"] }
glob = "0.3.3"
lru = "0.16.0"
pyo3 = { version = "0.28.0", features = ["auto-initialize", "abi3-py310", "generate-import-lib"], optional = true }
ropey = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { workspace = true }
tower-lsp-server = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }

[dev-dependencies]
criterion = "0.5.1"
insta = { version = "1.39.0", features = ["glob"] }
tempfile = "3.24.0"

[[bench]]
name = "parse_document"
harness = false

[[bench]]
name = "semantic_tokens"
harness = false
