[package]
name = "beancount-lsp"
version = { workspace = true }
edition = "2024"
description = "Beancount LSP"

[features]
default = []
pyo3 = ["dep:pyo3"]

[dependencies]
anyhow = "1.0.101"
beancount-core = { workspace = true }
beancount-parser = { workspace = true }
clap = { version = "4.5.57", features = ["derive"] }
glob = "0.3.3"
lru = "0.16.3"
pyo3 = { version = "0.28.0", features = ["auto-initialize", "abi3-py310", "generate-import-lib"], optional = true }
ropey = { workspace = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { workspace = true }
tower-lsp-server = { workspace = true }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }

[dev-dependencies]
criterion = "0.8.2"
insta = { version = "1.46.3", features = ["glob"] }
tempfile = "3.25.0"

[[bench]]
name = "parse_document"
harness = false

[[bench]]
name = "semantic_tokens"
harness = false
